@@ -1,0 +1,2 @@
+acts_as_audited_plugin.sqlite3.db
+test/debug.log
