@@ -39,6 +39,22 @@ To get auditing outside of Rails, or to customize which fields are audited withi
 
 See http://opensoul.org/2006/07/21/acts_as_audited for more information.
 
+== Parent record tracking
+
+To track the parent record of the record being audited, you pass an optional parent option in the model being audited:
+
+    class Author < ActiveRecord::Base
+      has_many :books
+    end
+    class Book < ActiveRecord::Base
+      belongs_to :author
+      acts_as_audited :parent => :author
+    end
+
+Each audit entry on a book will be associated to an author through <tt>auditable_parent</tt>, and each author will have a <tt>book_audits</tt> association for tracking the collective changes to an authors' books. This becomes really valuable to track when a book has been removed from the catalog.
+
+The association name on the parent is built using the singular of the <tt>has_many</tt> association name, with <tt>_audits</tt> appended, in the example yielding <tt>book_audits</tt> and not <tt>books_audits</tt>.
+
 == Caveats
 
 Auditing with user support depends on Rails' caching mechanisms, therefore auditing isn't enabled during development mode. To test that auditing is working, start up your app in production mode, or change the following options in config/environments/environment.rb: 
