@@ -3,6 +3,8 @@ class <%= class_name %> < ActiveRecord::Migration
     create_table :audits, :force => true do |t|
       t.column :auditable_id, :integer
       t.column :auditable_type, :string
+      t.column :auditable_parent_id, :integer
+      t.column :auditable_parent_type, :string
       t.column :user_id, :integer
       t.column :user_type, :string
       t.column :username, :string
@@ -13,6 +15,7 @@ class <%= class_name %> < ActiveRecord::Migration
     end
     
     add_index :audits, [:auditable_id, :auditable_type], :name => 'auditable_index'
+    add_index :audits, [:auditable_parent_id, :auditable_parent_type], :name => 'auditable_parent_index'
     add_index :audits, [:user_id, :user_type], :name => 'user_index'
     add_index :audits, :created_at  
   end
