@@ -11,6 +11,7 @@ require 'set'
 class Audit < ActiveRecord::Base
   belongs_to :auditable, :polymorphic => true
   belongs_to :user, :polymorphic => true
+  belongs_to :auditable_parent, :polymorphic => true
   
   before_create :set_version_number
   
